[workspace.package]
version = "0.6.8"
edition = "2021"


[workspace]
members = [
    "landscape",
    "landscape-common",
    "landscape-database",
    "landscape-database/migration",
    "landscape-dns",
    "landscape-ebpf",
    "landscape-macro",
    "landscape-protobuf",
    "landscape-webserver",
]

resolver = "2"
default-members = ["landscape-webserver"]


[workspace.dependencies]
# const_format = "0.2.34"
sysinfo = "0.35.2"

# base
once_cell = "1.21.3"
ctrlc = "3.4.7"
libc = "0.2.172"
homedir = "0.3.4"
thiserror = "2.0.12"
rand = "0.9.1"
regex = "1.11.1"
socket2 = "0.5.8"
paste = "1.0.15"
chrono = "0.4.41"

sysctl = "0.6.0"

# self_cell = "*"
colored = "3.0.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.19", default-features = false, features = [
    "rustls-tls",
] }

# cert
rustls = { version = "0.23.27", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
rcgen = "0.13.2"
rustls-pemfile = "2.2.0"

dhcproto = "0.12.0"

# libbpf
libbpf-rs = { version = "0.24.8" }
libbpf-cargo = { version = "0.24.8" }
libbpf-sys = { version = "*" }

# web
axum = { version = "0.8.4", features = ["ws", "multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum-server = "0.7.2"

# serde
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
bincode = { version = "2.0.1", features = ["std", "serde"] }
toml = "0.8.22"

rtnetlink = { version = "0.14.1" }
netlink-packet-route = { version = "0.19.0" }
netlink-packet-core = { version = "0.7.0" }
netlink-sys = { version = "0.8.6" }
wl-nl80211 = { version = "0.2.0" }

# for docker
bollard = "0.18.1"

# logs
# log = "0.4.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# export to ts
ts-rs = { version = "11.0.1", features = [
    "format",
    "serde-compat",
    "uuid-impl",
] }

# async
async-trait = "0.1.88"
tokio-rustls = "0.26.2"
tokio-util = { version = "0.7.15", features = ["codec", "net"] }

cidr = { version = "0.3.1" }

# databse
sea-orm = { version = "1.1.12" }
sea-orm-migration = { version = "1.1.12" }

# mem for dev
jemallocator = "0.5"
jemalloc-ctl = "0.5"

# hickory
hickory-server = "0.25.2"
hickory-client = "0.25.2"
hickory-resolver = "0.25.2"
hickory-proto = "0.25.2"

# polars 
polars = { version = "0.48.1", features = ["dtype-u16", "dtype-u8"] }
# duckdb
duckdb = { version = "1.3.0", features = ["bundled"] }


[workspace.dependencies.uuid]
version = "1.17.0"
features = ["v4", "serde"]

[workspace.dependencies.tokio]
version = "1.45.1"

[workspace.dependencies.pnet]
version = "0.35.0"

[workspace.dependencies.clap]
version = "4.5.39"
default-features = false
features = ["std", "derive", "help", "usage", "env"]
