[workspace.package]
version = "0.15.0"
edition = "2021"


[workspace]
members = [
    "landscape",
    "landscape-common",
    "landscape-database",
    "landscape-macro",
    "landscape-database/migration",
    "landscape-dns",
    "landscape-ebpf",
    "landscape-protobuf",
    "landscape-webserver",
]

resolver = "2"
default-members = ["landscape-webserver"]


[workspace.dependencies]

# ============================================================================
# Core & System Utilities
# ============================================================================
sysinfo = "0.38.2"
anyhow = "1.0.100"
thiserror = "2.0.18"
once_cell = "1.21.3"
chrono = "0.4.42"
arc-swap = "1.8.0"
regex = "1.12.2"
libc = "0.2.178"
nix = { version = "0.30.1" }
sysctl = "0.7.1"
homedir = "0.3.6"
hostname = "0.4.2"
socket2 = "0.6.2"
paste = "1.0.15"
rand = "0.10.0"
colored = "3.0.0"
dotenvy = "0.15.7"
ctrlc = "3.5.1"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
clap = { version = "4.5.53", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "env",
] }

# ============================================================================
# Async & Concurrency
# ============================================================================
tokio = { version = "1.49.0" }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.17", features = ["codec", "net"] }
tokio-rustls = "0.26.4"
async-trait = "0.1.89"
async-std = { version = "1", features = ["attributes", "tokio1"] }
futures = "0.3.11"
futures-util = { version = "0.3", default-features = false }

# ============================================================================
# Serialization & Data Formats
# ============================================================================
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.147" }
bincode = { version = "2.0.1", features = ["std", "serde"] }
toml = "0.9.8"
toml_edit = "0.23.9"
ts-rs = { version = "11.1.0", features = [
    "format",
    "serde-compat",
    "uuid-impl",
] }
bytes = "1.0"
deku = "0.18"
zerocopy = "0.8.31"
plain = "0.2"

# ============================================================================
# Network & Protocols
# ============================================================================
rtnetlink = { version = "0.20" }
netlink-packet-route = { version = "0.28.0" }
netlink-packet-core = { version = "0.8" }
netlink-sys = { version = "0.8" }
wl-nl80211 = { version = "0.4" }
pnet = { version = "0.35.0" }
etherparse = "0.19.0"
cidr = { version = "0.3.2" }
idna = "1.0.3"
dhcproto = "0.14.0"
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls",
] }
hickory-server = "0.25.2"
hickory-client = "0.25.2"
hickory-resolver = "0.25.2"
hickory-proto = "0.25.2"
quinn = { version = "0.11.2", features = ["runtime-tokio"] }
trie-rs = "0.4.2"
aho-corasick = "1.1.3"
moka = { version = "0.12.14", features = ["future"] }
zbus = "4.1.2"

# ============================================================================
# Web & HTTP
# ============================================================================
axum = { version = "0.8.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.12.3", features = [
    "typed-header",
    "with-rejection",
] }
axum-server = "0.8.0"
headers = "0.4"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
utoipa = { version = "5", features = ["uuid", "openapi_extensions"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

# ============================================================================
# Security & Cryptography
# ============================================================================
rustls = { version = "0.23.35", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
rustls-pki-types = "1.10"
pem = "3.0"
rcgen = "0.14.6"
instant-acme = "0.7"
sha2 = "0.10.8"

# ============================================================================
# Database & Storage
# ============================================================================
sea-orm = { version = "1.1.19" }
sea-orm-migration = { version = "1.1.19" }
duckdb = { version = "1.4.4", features = ["r2d2", "chrono"] }
polars = { version = "0.52.0", features = ["dtype-u16", "dtype-u8"] }
r2d2 = "0.8.10"
fs2 = "0.4.3"

# ============================================================================
# Logging & Monitoring
# ============================================================================
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"

# ============================================================================
# eBPF & Kernel
# ============================================================================
libbpf-rs = { version = "0.26.1" }
libbpf-cargo = { version = "0.26.1" }
libbpf-sys = { version = "1.6.3" }

# ============================================================================
# Code Generation & Macros
# ============================================================================
quote = "1.0.37"
syn = "2"
quick-protobuf = "0.8.1"

# ============================================================================
# Development & Build Tools
# ============================================================================
pb-rs = "0.10.0"
walkdir = "2"
tempfile = "3"
jemallocator = "0.5"
jemalloc-ctl = "0.5"
bollard = "0.19.4"
portable-pty = { version = "0.9.0" }
dashmap = "6.1.0"
