[package]
name = "landscape-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
homedir = { workspace = true }
hostname = "0.3"

toml_edit = { workspace = true }
tracing = { workspace = true }
