[package]
name = "landscape-common"
version.workspace = true
edition.workspace = true

[dependencies]
landscape-macro = { path = "../landscape-macro" }

serde = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
once_cell = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

tokio = { workspace = true, features = ["full"] }
homedir = { workspace = true }
hostname = "0.4.1"
dotenvy = { workspace = true }

tracing = { workspace = true }

ts-rs = { workspace = true }

uuid = { workspace = true }

libc = { workspace = true }

paste = { workspace = true }

hickory-proto = { workspace = true, features = ["serde"] }

dhcproto = { workspace = true, features = ["serde"] }
sea-orm = { workspace = true, features = ["with-uuid", "with-json"] }
async-trait = { workspace = true }


toml = { workspace = true }

polars = { workspace = true, features = ["lazy", "parquet"], optional = true }
duckdb = { workspace = true, optional = true }

[features]
default = []

polars = ["dep:polars"]
duckdb = ["dep:duckdb"]


[dev-dependencies]
tempfile = "*"
