[package]
name = "landscape-database"
version.workspace = true
edition.workspace = true

[dependencies]
landscape-common = { path = "../landscape-common" }
migration = { path = "./migration" }
sea-orm = { workspace = true, features = ["with-uuid", "with-json"] }

serde = { workspace = true }
serde_json = { workspace = true }

async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }


[features]
default = []
postgres = []
