[package]
name = "landscape-dns"
version.workspace = true
edition.workspace = true

[dependencies]
landscape-ebpf = { path = "../landscape-ebpf" }
landscape-common = { path = "../landscape-common" }
landscape-protobuf = { path = "../landscape-protobuf" }

hickory-server = "0.25.1"
hickory-client = "0.25.1"
hickory-resolver = { version = "0.25.1", features = [
    "system-config",
    "__tls",
    "__https",
    "rustls-platform-verifier",
] }
hickory-proto = { version = "0.25.1", features = [
    "__https",
    "__tls",
    "tls-ring",
] }
tokio = { workspace = true, features = ['fs', 'net'] }
clap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
async-trait = "*"
socket2 = "*"

lru = "*"
serde = { workspace = true }
serde_json = { workspace = true }

trie-rs = "0.4.2"
regex = "*"
aho-corasick = "1.1.3"
