[package]
name = "landscape-dns"
version.workspace = true
edition.workspace = true

[dependencies]
landscape-ebpf = { path = "../landscape-ebpf" }
landscape-common = { path = "../landscape-common" }
landscape-protobuf = { path = "../landscape-protobuf" }

hickory-server = { workspace = true }
hickory-client = { workspace = true }
hickory-resolver = { workspace = true, features = [
    "system-config",
    "__tls",
    "__https",
    "rustls-platform-verifier",
] }
hickory-proto = { workspace = true, features = [
    "__https",
    "__tls",
    "tls-ring",
] }
tokio-util = { workspace = true, features = ["codec", "net"] }
tokio = { workspace = true, features = ['fs', 'net'] }
clap = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
async-trait = "*"
socket2 = "*"

lru = "*"
serde = { workspace = true }
serde_json = { workspace = true }
ctrlc = { workspace = true }

trie-rs = "0.4.2"
regex = "*"
aho-corasick = "1.1.3"

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
futures-util = "*"

nix = { version = "0.29.0", features = ["socket", "uio"] }
ts-rs = { workspace = true }


[dev-dependencies]
homedir = { workspace = true }
jemallocator = { workspace = true }
jemalloc-ctl = { workspace = true }
