[package]
name = "landscape-ebpf"
version.workspace = true
edition.workspace = true

[dependencies]
landscape-common = { path = "../landscape-common" }
libbpf-rs = { workspace = true }
clap = { workspace = true }
libc = { workspace = true }
ctrlc = { workspace = true }
pnet = { workspace = true }
tokio = { workspace = true, features = ["full"] }
nix = { version = "0.28", default-features = false, features = [
    "net",
    "user",
    "sched",
] }

socket2 = { workspace = true }
serde = { workspace = true }
plain = "0.2"

[build-dependencies]
libbpf-cargo = { workspace = true }
# linux 6.1 如果是使用 
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "a9c092aa771310bf8b00b5018f7d40a1fdb6ec82" }
# linux 6.6
# vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }


[[bin]]
name = "xdp_test"
path = "src/bin/xdp_test.rs"

[[bin]]
name = "pppoe_tc_test"
path = "src/bin/pppoe_tc_test.rs"
