[package]
name = "landscape-webserver"
version.workspace = true
edition.workspace = true

[dependencies]
landscape = { path = "../landscape" }
landscape-dns = { path = "../landscape-dns" }
landscape-common = { path = "../landscape-common" }

jsonwebtoken = "9"
once_cell = { workspace = true }

tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }

homedir = { workspace = true }

futures = "0.3"

futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }

thiserror = { workspace = true }

tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }

serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }

bollard = { workspace = true }

rand = { workspace = true }

# logs
tracing = { workspace = true }
