[package]
name = "landscape-webserver"
version.workspace = true
edition.workspace = true

[dependencies]
landscape = { path = "../landscape" }
landscape-dns = { path = "../landscape-dns" }
landscape-common = { path = "../landscape-common", features = ["openapi"] }
landscape-database = { path = "../landscape-database" }
landscape-ebpf = { path = "../landscape-ebpf" }
landscape-gateway = { path = "../landscape-gateway", optional = true }

arc-swap = { workspace = true }

rustls = { workspace = true }
rcgen = { workspace = true }
rustls-pki-types = { workspace = true }
pem = { workspace = true }
tokio-rustls = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

colored = { workspace = true }
jsonwebtoken = { workspace = true }
once_cell = { workspace = true }

tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-server = { workspace = true, features = ["tls-rustls"] }
headers = { workspace = true }

homedir = { workspace = true }

futures = { workspace = true }

futures-util = { workspace = true, default-features = false, features = [
    "sink",
    "std",
] }

thiserror = { workspace = true }

tower = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

bollard = { workspace = true }

rand = { workspace = true }

utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true }

# logs
tracing = { workspace = true }

[features]
default = ["gateway"]
gateway = ["dep:landscape-gateway"]
static = ["landscape-ebpf/static"]
metric-duckdb = ["landscape/metric-duckdb"]
duckdb-bundled = ["landscape/duckdb-bundled"]
