[package]
name = "migration"
version.workspace = true
edition.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
serde_json = { workspace = true }
uuid = { workspace = true }

[dependencies.sea-orm-migration]
workspace = true
features = [
    # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
    # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
    # e.g.
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-mysql",
    "sqlx-sqlite",
    "with-uuid",
    "with-json",
]
